
ChangeLog
 [ + added, - removed, * changed ]
 * 08Jul2016 Removes bootstrap warning due to shared-libraries test Makefile.am
 debug rules.
 * 06Jul2016 Fixes shared-libraries test
 + 06Jul2016 Added posix_memalign to the list of memory wrappers 
 + 05Jul2016 Always enable POSIX clock and control it via EXTRAE_USE_POSIX_CLOCK
 environment variable.
 * 04Jul2016 Enable peps sampling by default
 + 28Jun2016 Adds .gitignore with build generated files
 + 28Jun2016 Added instrumentation wrappers for memkind_malloc* routines
 * 28Jun2016 Fixes tests that fail when Extrae is built from within a folder
 * 15Jun2016 Consider callers when computing buffer size for IO calls
 * 13Jun2016 Fix compilation error when enabling heterogeneous
 * 09Jun2016 JAVA tracer tests now run after installation.
             Fix ompss tests reference files.
	     Fix MPI Iprobe_wait test.
 + 03May2016 Add recording of MPI one-sided operations' size
 * 23May2016 Rank 0 was exiting if XML file couldn't be opened, leaving the others stalled in a collective
 + 17May2016 Add wrappers and merger support to instrument open, fopen and the string name of the opened files
 * 13May2016 Add MPI_Finalize to dlsym PMPI hook
 + 12May2016 Add configure option to use dlsym as PMPI hook
 * 12May2016 Fixed table of states colors with missing states
 + 12May2016 Added wrappers to instrument both 32 and 64-bit I/O calls preadv, pwritev, preadv64, pwritev64
 * 11May2016 Remove SVN revision and branch check and creation of SVN-branch and
             SVN-revision files
 * 04May2016 Added the missing case MPI_WIN_CREATE_EV in the Get_State function 
 * 29Apr2016 Added check for POE environments in the launcher of the online_root 
 + 28Apr2016 Added tracing finalization mechanism for the OMPT target devices, started by Extrae at Backend_Finalization using calls to ompt_target_stop_trace.
 + 27Apr2016 Add support for IBM Platform MPI
 * 27Apr2016 Bug fixes in the instrumentation of OMPT target devices